--- a/SASS/styles/style.css
+++ b/SASS/styles/style.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: black;
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 15px;
 }
 .header ul {
   color: white;
@@ -23,6 +23,10 @@
   box-sizing: border-box;
 }
 
+.div1 .div2 p {
+  text-decoration: underline;
+}
+
 .div1 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -30,10 +34,20 @@
   justify-content: center;
   gap: 10px 10px;
   width: 100%;
+  padding: 2px;
 }
 .div1 .div2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 160px;
   background-color: rgb(1, 45, 54);
+  border-radius: 6px;
+}
+.div1 .div2 p {
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.css.map */
